// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendEmailForm render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_email"
  title="Send Email"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Send an email",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "subject",
          "body",
        ],
        "name": "Send Email",
        "type": "send_email",
        "visibility": Array [
          "messaging",
          "messaging_background",
          "voice",
        ],
      }
    }
    onChange={[MockFunction]}
  />
  <div
    className="ele"
  >
    <TaggingElement
      createPrompt=""
      entry={
        Object {
          "value": Array [
            "jane@example.com",
          ],
        }
      }
      name="Recipient"
      onChange={[Function]}
      onCheckValid={[Function]}
      placeholder="To"
      prompt="Enter email address"
    />
    <TextInputElement
      __className="subject"
      autocomplete={true}
      entry={
        Object {
          "value": "New Sign Up",
        }
      }
      name="Subject"
      onChange={[Function]}
      placeholder="Subject"
    />
    <TextInputElement
      __className="message"
      autocomplete={true}
      entry={
        Object {
          "value": "@run.results.name just signed up.",
        }
      }
      name="Message"
      onChange={[Function]}
      showLabel={false}
      textarea={true}
    />
  </div>
</Dialog>
`;

exports[`SendEmailForm updates should allow switching from router 1`] = `
Array [
  Object {
    "addresses": Array [
      "joe@domain.com",
      "jane@domain.com",
    ],
    "body": "What is a group of tigers called?",
    "subject": "URGENT: I have a question",
    "type": "send_email",
    "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
  },
]
`;

exports[`SendEmailForm updates should save changes 1`] = `
Object {
  "body": Object {
    "validationFailures": Array [],
    "value": "What is a group of tigers called?",
  },
  "recipients": Object {
    "validationFailures": Array [],
    "value": Array [
      "joe@domain.com",
      "jane@domain.com",
    ],
  },
  "subject": Object {
    "validationFailures": Array [],
    "value": "URGENT: I have a question",
  },
  "valid": true,
}
`;

exports[`SendEmailForm updates should save changes 2`] = `
Array [
  Object {
    "addresses": Array [
      "joe@domain.com",
      "jane@domain.com",
    ],
    "body": "What is a group of tigers called?",
    "subject": "URGENT: I have a question",
    "type": "send_email",
    "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
  },
]
`;
